@@ -53,6 +53,7 @@
     <Compile Include="Compiler\TokenType.cs" />
     <Compile Include="Language\BaseObject.cs" />
     <Compile Include="Language\ClonedObject.cs" />
+    <Compile Include="Language\LocalObject.cs" />
     <Compile Include="Language\IObject.cs" />
     <Compile Include="Language\IoObject.cs" />
     <Compile Include="Language\Message.cs" />
